--- a/index.html
+++ b/index.html
@@ -381,9 +381,13 @@
                 ctx.stroke();
                 const mesh = new THREE.Mesh(new THREE.PlaneGeometry(6,6), new THREE.MeshBasicMaterial({ map: new THREE.CanvasTexture(cvs), side: THREE.DoubleSide, transparent:true }));
                 const y = Math.random() * (state.treeHeight * 0.8);
-                const r = (1 - y/state.treeHeight) * (state.treeHeight*0.4) + 2; 
+// 增加半径基础倍数，并移除内缩的偏移量
+                const r = (1 - y/state.treeHeight) * (state.treeHeight * 0.5); // 0.4 增大为 0.5， 并去掉了 +2
                 const a = Math.random() * Math.PI * 2;
                 const origin = new THREE.Vector3(Math.cos(a)*r, y-10, Math.sin(a)*r);
+// 可选：如果你想完全取消爆炸效果，让照片固定不动，可以将下面一行注释掉
+// const explodeDir = origin.clone().normalize().multiplyScalar(40 + Math.random()*30); explodeDir.y += 20;
+                mesh.position.copy(origin);
                 const explodeDir = origin.clone().normalize().multiplyScalar(40 + Math.random()*30); explodeDir.y += 20;
                 mesh.position.copy(origin);
                 mesh.userData = { origin: origin, explodePos: explodeDir, imgSrc: img.src };
@@ -476,3 +480,4 @@
     </script>
 </body>
 </html>
+
