--- a/index.html
+++ b/index.html
@@ -265,6 +265,13 @@
             createTopObject();
             createSnow();
             animate();
+            
+            // ========== 新增的代码：自动挂载照片 ==========
+            // 等待场景稳定后，自动将预加载的照片挂到树上
+            setTimeout(() => updatePhotos(), 1500);
+            // ===========================================
+            
+            // 原有的预加载逻辑保持不变
             setTimeout(() => {
                 const preloaded = document.getElementById('preloaded-photos');
                 if(preloaded) {
@@ -276,7 +283,7 @@
                             loadedImages.push(newImg);
                             if(loadedImages.length === imgs.length) {
                                 console.log(`已预加载 ${loadedImages.length} 张照片`);
-                                updatePhotos();
+                                // 注意：updatePhotos() 现在由上面的代码触发，这里不再调用
                             }
                         };
                         newImg.onerror = () => {
@@ -381,13 +388,9 @@
                 ctx.stroke();
                 const mesh = new THREE.Mesh(new THREE.PlaneGeometry(6,6), new THREE.MeshBasicMaterial({ map: new THREE.CanvasTexture(cvs), side: THREE.DoubleSide, transparent:true }));
                 const y = Math.random() * (state.treeHeight * 0.8);
-// 增加半径基础倍数，并移除内缩的偏移量
-                const r = (1 - y/state.treeHeight) * (state.treeHeight * 0.5); // 0.4 增大为 0.5， 并去掉了 +2
+                const r = (1 - y/state.treeHeight) * (state.treeHeight*0.4) + 2; 
                 const a = Math.random() * Math.PI * 2;
                 const origin = new THREE.Vector3(Math.cos(a)*r, y-10, Math.sin(a)*r);
-// 可选：如果你想完全取消爆炸效果，让照片固定不动，可以将下面一行注释掉
-// const explodeDir = origin.clone().normalize().multiplyScalar(40 + Math.random()*30); explodeDir.y += 20;
-                mesh.position.copy(origin);
                 const explodeDir = origin.clone().normalize().multiplyScalar(40 + Math.random()*30); explodeDir.y += 20;
                 mesh.position.copy(origin);
                 mesh.userData = { origin: origin, explodePos: explodeDir, imgSrc: img.src };
@@ -480,4 +483,3 @@
     </script>
 </body>
 </html>
-
