--- a/index.html
+++ b/index.html
@@ -386,7 +386,16 @@
                 ctx.lineWidth=10; 
                 ctx.strokeStyle = state.style === 'cny' ? '#ffd700' : '#ffffff';
                 ctx.stroke();
-                const mesh = new THREE.Mesh(new THREE.PlaneGeometry(6,6), new THREE.MeshBasicMaterial({ map: new THREE.CanvasTexture(cvs), side: THREE.DoubleSide, transparent:true }));
+                const mesh = new THREE.Mesh(
+    new THREE.PlaneGeometry(6,6), 
+    new THREE.MeshBasicMaterial({ 
+        map: new THREE.CanvasTexture(cvs), 
+        side: THREE.DoubleSide, 
+        transparent: true,
+        depthWrite: false,    // 新增：禁止写入深度缓冲区
+        depthTest: false      // 新增：禁用深度测试
+    })
+);
                 const y = Math.random() * (state.treeHeight * 0.8);
                 const r = (1 - y/state.treeHeight) * (state.treeHeight*0.4) + 2; 
                 const a = Math.random() * Math.PI * 2;
@@ -483,4 +492,5 @@
     </script>
 </body>
 </html>
+
 
